# libccanvas

./: Cargo.toml  README.md
examples/: README.md
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs
examples/explorer/: README.md
examples/explorer/explorer-dir/: Cargo.toml  README.md
examples/explorer/explorer-dir/src/: main.rs
examples/explorer/explorer-file/: Cargo.toml  README.md
examples/explorer/explorer-file/src/: main.rs
examples/explorer/explorer-manager/: Cargo.toml  README.md
examples/explorer/explorer-manager/src/: main.rs
examples/explorer/explorer-path/: Cargo.toml  README.md
examples/explorer/explorer-path/src/: main.rs
examples/paint/: README.md
examples/paint/paint-canvas/: Cargo.toml
examples/paint/paint-canvas/src/: main.rs
examples/paint/paint-manager/: Cargo.toml
examples/paint/paint-manager/src/: main.rs
examples/setchar/: README.md
examples/setchar/src/: main.rs
examples/snake/: README.md
examples/snake/snake-launcher/: Cargo.toml
examples/snake/snake-launcher/src/: main.rs
examples/snake/snake-main/: Cargo.toml
examples/snake/snake-main/src/: main.rs  snake.rs
examples/snake/snake-scoreboard/: Cargo.toml
examples/snake/snake-scoreboard/src/: main.rs
src/: client.rs  clientbuilder.rs  clientconfig.rs  lib.rs  pass.rs
src/bindings/: discriminator.rs
src/bindings/request/: request.rs  subscription.rs
src/bindings/response/: event.rs  eventvariant.rs  response.rs
src/client/: client.rs  clientconfig.rs  lifetimesuppressor.rs  mod.rs
src/defaults/: mod.rs  ondrop.rs  onrecv.rs
src/features/: mod.rs
src/features/betterserde/: README.md  mod.rs
src/features/common/: dimension.rs  direction.rs  mod.rs  rect.rs
src/features/config/: README.md  mod.rs
src/features/layout/: README.md  border.rs  client.rs  constraint.rs  layout.rs  layoutcomponent.rs  layoutinfo.rs  mod.rs  request.rs
src/features/saver/: README.md  mod.rs
src/features/scroll/: README.md  client.rs  mod.rs  request.rs  scrollcomponent.rs
subcrates/ccanvas-config-derive/: Cargo.toml  README.md
subcrates/ccanvas-config-derive/src/: lib.rs
