[package]
name = "libccanvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ]}
tokio = { version = "1", features = [ "sync", "rt", "rt-multi-thread" ]}
nu-json = "0" # for config files


[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
