[package]
name = "ccanvas-paint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libccanvas = { path = "../../../" }
tokio = { version = "1", features = [ "macros" ]}

# size optimisations, does not degrade performance
[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
